kubernetes/apps/base/media/arr/wizarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wizarr
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: wizarr
  template:
    metadata:
      labels:
        app: wizarr
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: wizarr
          image: ghcr.io/wizarrrr/wizarr:latest
          ports:
            - name: http
              containerPort: 5690
          volumeMounts:
            - name: database
              mountPath: /data/database
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 512Mi
      volumes:
        - name: database
          persistentVolumeClaim:
            claimName: wizarr-database
