kubernetes/apps/base/media/arr/wizarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wizarr
  namespace: media
spec:
  selector:
    app: wizarr
  ports:
    - name: http
      port: 5690
      targetPort: http
