kubernetes/apps/base/media/arr/wizarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wizarr-ingress
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`wizarr.${cluster_domain}`)
      kind: Rule
      services:
        - name: wizarr
          port: 5690
